--- a/preamble.tex
+++ b/preamble.tex
@@ -154,12 +154,19 @@
 \newcommand*{\sub}[1]{_{#1}}
 \newcommand*{\subb}[1]{[#1]}
 
-% GP terms
+% Caligraphic terms
+\newcommand*{\wallclock}{\mathcal{T}}
+
+% Constants
+\newcommand*{\corecount}{\mathsf{C}}
+\newcommand*{\valcount}{\mathsf{V}}
+
+% Numeric
 \newcommand*{\timeslot}{\N_T}
-\newcommand*{\balance}{\balance}
+\newcommand*{\balance}{\N_B}
 \newcommand*{\gas}{\N_G}
-\newcommand*{\coreindex}{\N_\mathsf{C}}
-\newcommand*{\valindex}{\N_\mathsf{V}}
+\newcommand*{\coreindex}{\N_\corecount}
+\newcommand*{\valindex}{\N_\valcount}
 
 % TODO: Use non-prefixed items for common fields:
 \newcommand*{\¬gaslimit}{g}
