--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -152,7 +152,7 @@
   \item[$\mathcal{Q}(\dots)$] The numeric-sequence-from-hash function. See equation \ref{eq:sequencefromhash}.
   \item[$\mathcal{R}$] The group of erasure-coding piece-recovery functions.
   \item[$\mathcal{S}_k(\dots)$] The general signature function. See section \ref{sec:cryptography}.
-  \item[$\mathcal{T}$] The current time expressed in seconds after the start of the \Jam Common Era. See section \ref{sec:commonera}.
+  \item[$\wallclock$] The current time expressed in seconds after the start of the \Jam Common Era. See section \ref{sec:commonera}.
   \item[$\mathcal{U}(\dots)$] The substitute-if-nothing function. See equation \ref{eq:substituteifnothing}.
   \item[$\mathcal{V}(\dots)$] The range, or set of values, of a dictionary or sequence. See section \ref{sec:dictionaries}.
   \item[$\mathcal{X}_n(\dots)$] The signed-extension function for a value in $\N_{2^{8n}}$. See equation \ref{eq:signedextension}.
