--- a/text/header.tex
+++ b/text/header.tex
@@ -2,14 +2,14 @@
 
 We must first define the header in terms of its components. The header comprises a parent hash and prior state root ($\H_\¬parent$ and $\H_\¬priorstateroot$), an extrinsic hash $\H_\¬extrinsichash$, a time-slot index $\H_\¬timeslot$, the epoch, winning-tickets and offenders markers $\H_\¬epochmark$, $\H_\¬winnersmark$ and $\H_\¬offendersmark$, a block author index $\H_\¬authorindex$ and two Bandersnatch signatures; the entropy-yielding \textsc{vrf} signature $\H_\¬vrfsig$ and a block seal $\H_\¬sealsig$. Headers may be serialized to an octet sequence with and without the latter seal component using $\se$ and $\seunsignedheader$ respectively. Formally:
 \begin{equation}\label{eq:header}
-  \h \equiv (\H_\¬parent, \H_\¬priorstateroot, \H_\¬extrinsichash, \H_\¬timeslot, \H_\¬epochmark, \H_\¬winnersmark, \H_\¬offendersmark, \H_\¬authorindex, \H_\¬vrfsig, \H_\¬sealsig)
+  \theheader \equiv (\H_\¬parent, \H_\¬priorstateroot, \H_\¬extrinsichash, \H_\¬timeslot, \H_\¬epochmark, \H_\¬winnersmark, \H_\¬offendersmark, \H_\¬authorindex, \H_\¬vrfsig, \H_\¬sealsig)
 \end{equation}
 
 The blockchain is a sequence of blocks, each cryptographically referencing some prior block by including a hash derived from the parent's header, all the way back to some first block which references the genesis header. We already presume consensus over this genesis header $\genesisheader$ and the state it represents defined as $\genesisstate$.
 
 \newcommand*{\parentfn}{P}
 
-Excepting the Genesis header, all block headers $\header$ have an associated parent header, whose hash is $\header_\¬parent$. We denote the parent header $\parentof{\header} = \parentfn(\header)$:
+Excepting the Genesis header, all block headers $\header$ have an associated parent header, whose hash is $\header_\¬parent$. We denote the parent header $\parentheader{\header} = \parentfn(\header)$:
 \begin{equation}
   \header_\¬parent \in \hash \,,\quad \H_\¬parent \equiv \blake(\se(\parentfn(\header)))
 \end{equation}
@@ -23,7 +23,7 @@ We only require implementations to store headers of ancestors which were authore
 
 The extrinsic hash is a Merkle commitment to the block's extrinsic data, taking care to allow for the possibility of reports to individually have their inclusion proven. Given any block $\mathbf{B} = (\H, \mathbf{E})$, then formally:
 \begin{align}
-  \H¬\¬extrinsichash &\in \hash \ ,\quad
+  \H_\¬extrinsichash &\in \hash \ ,\quad
   \H_\¬extrinsichash \equiv \blake(\se(\blake^\#(\mathbf{a}))) \\
   \where \mathbf{a} &= [\se_T(\xttickets), \se_P(\xtpreimages), \mathbf{g}, \se_A(\xtassurances), \se_D(\xtdisputes)] \\
   \also \mathbf{g} &= \se(\var{[(\blake(w), \se_4(t), \var{a}) \mid (w, t, a) \orderedin \xtguarantees]})
@@ -32,10 +32,10 @@ The extrinsic hash is a Merkle commitment to the block's extrinsic data, taking 
 A block may only be regarded as valid once the time-slot index $\H_\¬timeslot$ is in the past. It is always strictly greater than that of its parent. Formally:
 \begin{equation}
   \H_\¬timeslot \in \timeslot \,,\quad
-  \parentfn(\H)_t < \H_\¬timeslot\ \wedge\ \H_\¬timeslot\cdot\mathsf{P} \leq \mathcal{T}
+  \parentfn(\H)_t < \H_\¬timeslot\ \wedge\ \H_\¬timeslot\cdot\mathsf{P} \leq \wallclock
 \end{equation}
 
-Blocks considered invalid by this rule may become valid as $\mathcal{T}$ advances.
+Blocks considered invalid by this rule may become valid as $\wallclock$ advances.
 
 The parent state root $\H_\¬priorstateroot$ is the root of a Merkle trie composed by the mapping of the \emph{prior} state's Merkle root, which by definition is also the parent block's posterior state. This is a departure from both Polkadot and the Yellow Paper's Ethereum, in both of which a block's header contains the \emph{posterior} state's Merkle root. We do this to facilitate the pipelining of block computation and in particular of Merklization.
 \begin{equation}
